Sets up landing page

--- a/Desktop/Projects/tracykvincent/public/views/index.html
+++ b/Desktop/Projects/tracykvincent/public/views/index.html
@@ -2,10 +2,19 @@
 
   <html>
     <head>
+      <link href="vendor/bootstrap/dist/css/bootstrap-theme.min.css" rel="stylesheet"/>
+      <link href="vendor/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" />
+      <link href="styles/styles.css" rel="stylesheet" />
+      <script src="vendor/angular/angular.min.js"></script>
+      <script src="vendor/angular-route/angular-route.min.js"></script>
+      <script src="assets/client.min.js"></script>
+      <base href="/" />
     </head>
 
     <body>
-      <h1>Hello World</h1>
+      <h1>Tracy K Vincent</h1>
+      <a href='https://www.facebook.com/TracyKVPhoto/'>Photographer</a>
+      <a href='/developer'>Web Developer</a>
     </body>
 
   </html>
